tests/machine/x/java/left_join_multi.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsleft_join_multi3073721853/001/Main.java:53: error: incompatible types: Object cannot be converted to DataClass3
				_res3.add(new DataClass4(o.id, c.name, i));
				                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


  1| let customers = [
  2|   { id: 1, name: "Alice" },